15-kafka-pixy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafka-pixy
  namespace: default
  labels:
    app: kafka-pixy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-pixy
    spec:
      volumes:
      - configMap:
          defaultMode: 0644
          name: kafka-pixy
        name: config-volume
      containers:
      - name: kafka
        image: mailgun/kafka-pixy:0.15.0
        volumeMounts:
          - mountPath: /etc/kafa-pixy
            name: config-volume
        args:
        - --config=/etc/kafa-pixy/config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-pixy
  namespace: default
  labels:
    app: kafka-pixy
spec:
  type: ClusterIP
  ports:
  - name: grpc
    protocol: TCP
    port: 5000
    targetPort: 19091
  - name: http
    protocol: TCP
    port: 80
    targetPort: 19092
  selector:
    app: kafka-pixy
