10.4-busyboxes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: busybox
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: tls-busybox-default-k8s-strix-kr
    hosts:
    - default.busybox.k8s.strix.kr
    - busybox.k8s.strix.kr
  rules:
  - host: busybox.k8s.strix.kr
    http:
      paths:
      - backend:
          serviceName: busybox
          servicePort: 80
        path: /
  - host: default.busybox.k8s.strix.kr
    http:
      paths:
      - backend:
          serviceName: busybox
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: busybox
  namespace: prod
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: tls-busybox-prod-k8s-strix-kr
    hosts:
    - prod.busybox.k8s.strix.kr
  rules:
  - host: prod.busybox.k8s.strix.kr
    http:
      paths:
      - backend:
          serviceName: busybox
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: busybox
  namespace: dev
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: tls-busybox-dev-k8s-strix-kr
    hosts:
    - dev.busybox.k8s.strix.kr
  rules:
  - host: dev.busybox.k8s.strix.kr
    http:
      paths:
      - backend:
          serviceName: busybox
          servicePort: 80
        path: /
---
