14-kube-dashboard-keycloak-proxy.yaml
# After setup keycloak, have created "kubernetes" IAM client.
# ref: https://www.keycloak.org/docs/3.0/authorization_services/topics/resource-server/create-client.html
# And have updated cluster api oidc authentication configureation via kops.
# ref: https://github.com/kubernetes/kops/blob/666fb2ce542a0f853160981a8ed6069a444e8a48/docs/cluster_spec.md#kubeapiserver
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-dashboard-keycloak-proxy
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-dashboard-keycloak-proxy
    spec:
      containers:
      - image: quay.io/gambol99/keycloak-proxy:v2.1.1
        name: kube-dashboard-keycloak-proxy
        args:
          - --listen=0.0.0.0:3000
          - --discovery-url=https://iam.k8s.strix.kr/realms/master
          - --client-id=kubernetes
          - --client-secret=1e117a20-3f0c-4648-acec-18a81f8f41fe
          - --redirection-url=https://k8s.strix.kr
          - --enable-refresh-tokens=true
          - --encryption-key=MsVRtDTD3TPXaI6bfAxfBvHUKUhjjXOn    # 32 bytes string
          - --upstream-url=https://kube-dashboard.kube-system.svc.cluster.local
          - --resources=uri=/*
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /oauth/health
            port: 3000
          initialDelaySeconds: 3
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /oauth/health
            port: 3000
          initialDelaySeconds: 3
          timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: kube-dashboard-keycloak-proxy
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: kube-dashboard-keycloak-proxy
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-dashboard-keycloak-proxy
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_input_headers "accept-language:";
spec:
  tls:
  - secretName: k8s-strix-kr
    hosts:
    - k8s.strix.kr
  rules:
  - host: k8s.strix.kr
    http:
      paths:
      - backend:
          serviceName: kube-dashboard-keycloak-proxy
          servicePort: 3000
        path: /
---
