16-jenkins-ingress-and-service-account.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: deploy-k8s-strix-kr
    hosts:
    - deploy.k8s.strix.kr
  rules:
  - host: deploy.k8s.strix.kr
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /
