17-mediawiki-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mediawiki
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: tls-wiki-strix-kr
    hosts:
    - wiki.strix.kr
  rules:
  - host: wiki.strix.kr
    http:
      paths:
      - backend:
          serviceName: mediawiki-mediawiki
          servicePort: 80
        path: /
---
