6-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      application: demo
  template:
    metadata:
      labels:
        application: demo
    spec:
      containers:
      - name: skipper-demo
        image: registry.opensource.zalan.do/pathfinder/skipper:latest
        args:
          - "skipper"
          - "-inline-routes"
          - "* -> inlineContent(\"<body style='color: red; background-color: white;'><h1>Hello World!</h1>\") -> <shunt>"
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: development
  labels:
    application: demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9090
      name: external
  selector:
    application: demo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  namespace: development
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt"
    certmanager.k8s.io/acme-challenge-type: "dns01"
    certmanager.k8s.io/acme-dns01-provider: "route53"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: demo-strix-kr-tls
    hosts:
    - demo.strix.kr
  rules:
  - host: demo.strix.kr
    http:
      paths:
      - backend:
          serviceName: demo
          servicePort: 80
        path: /
