8-kubeapps-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeapps
  namespace: kubeapps
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: apps-k8s-strix-kr
    hosts:
    - apps.k8s.strix.kr
  rules:
  - host: apps.k8s.strix.kr
    http:
      paths:
      - backend:
          serviceName: kubeapps
          servicePort: 80
        path: /
---
