9-kube-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_input_headers "accept-language:";
spec:
  tls:
  - secretName: k8s-strix-kr
    hosts:
    - k8s.strix.kr
  rules:
  - host: k8s.strix.kr
    http:
      paths:
      - backend:
          serviceName: kube-dashboard
          servicePort: 443
        path: /
---
