10-namespace-and-network-policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: dev
  name: deny-ingress-from-prod
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
          - {key: name, operator: NotIn, values: [prod]}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: prod
  name: deny-ingress-from-dev
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
          - {key: name, operator: NotIn, values: [dev]}
---
