10.1-namespace-network-policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: deny-ingress-from
  namespace: dev
spec:
  podSelector: {}
  policyTypes: [ Ingress, Egress ]
  egress: []
  ingress:
    - from:
      - namespaceSelector:
          matchExpressions:
            - key: environment
              operator: Exists 
              values: []
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: deny-ingress-from
  namespace: prod
spec:
  podSelector: {}
  policyTypes: [ Ingress, Egress ]
  egress: []
  ingress:
    - from:
      - namespaceSelector:
          matchExpressions:
            - key: environment
              operator: Exists
              values: []
---
